--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
+
+  <!-- angular app gets insterted here-->
   <app-root></app-root>
+  
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
